# ha-presence

./: .gitignore  README.md  ha-presence.example.toml  pyproject.toml
packaging/systemd/: ha-presence.service  install.sh  uninstall.sh
packaging/windows/: install_service.ps1  uninstall_service.ps1
src/ha_presence/: config.py  logging_setup.py  main.py  mqtt_client.py  presence.py  service.py
src/ha_presence/platform/: linux.py  windows.py  windows_service.py
src/ha_presence/update/: base.py  git_updater.py  manager.py  share_updater.py
tests/integration/: test_cli.py
tests/unit/: test_config.py  test_presence.py  test_update_manager.py
